<resources>
    <string name="app_name">Welcome app</string>
    <string name="error_initialize_app">An error has occurred while trying initialize the application</string>
    <string name="home">Home</string>
    <string name="call_cloud">Call cloud</string>
    <string name="push_notification">Push notification</string>
    <string name="data_browser">Data browser</string>
    <string name="native_app_info">Native App Info</string>
    <string name="cloud_integrations">Cloud integrations</string>
    <string name="statistics">Statistics</string>
    <string name="home_title">Welcome to\nFeedHenry</string>
    <string name="home_subtitle">Learn about and interact with our platform</string>
    <string name="location_example">Location Example</string>
    <string name="cloud_action_text">This client app is now connected to its matching Node.js cloud code on FeedHenry. Tap the button to request a response from the cloud.</string>
    <string name="response">Response: %1$s</string>
    <string name="cloud_response_text">Now check your stats page in the studio to check that this cloud call happened.</string>
    <string name="comming_soon">Comming soon!</string>
    <string name="location_text">Let\'s grab your location and do something with it.</string>
    <string name="get_weather">Get weather</string>
    <string name="temperature">%1$s°C</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="data_browser_text">First go to the Data Browser menu in your cloud code in the Studio and enable it. Then enter your name here and tap the button to save your name in our cloud database.</string>
    <string name="save">Save</string>
    <string name="data_saved">Yay, Your data was saved in the cloud</string>
    <string name="about_this_device">About this device</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="product">Product</string>
    <string name="serial">Serial</string>
    <string name="cpu">CPU</string>
    <string name="host">Host</string>
    <string name="the_could_host">The could host</string>
    <string name="cloud_app_name">App name: </string>
    <string name="cloud_domain">Domain: </string>
    <string name="cloud_env">Env: </string>
    <string name="cloud_port">Port: </string>
    <string name="integrations_text">You can easily integrate with all of your existing back-end systems using Cloud Plugins. Check out the App Studio to see how to connect to Databases, Messaging, Analytics, SaaS, eCommerce, Logging, Data Storage, Testing Tools and File Storage. A few examples including</string>
    <string name="statistics_text">In addition to all of our app install/usage analytics, you can also instrument your cloud code to see exactly how it\'s performing. Go to the stats section of the Studio and see if your device has been detected</string>
</resources>