<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/drawer_cloud"
            android:checked="true"
            android:icon="@drawable/ic_cloud"
            android:title="@string/call_cloud"/>

        <item
            android:id="@+id/drawer_push"
            android:icon="@drawable/ic_push"
            android:title="@string/push_notification"/>

        <item
            android:id="@+id/drawer_data"
            android:icon="@drawable/ic_data"
            android:title="@string/data_browser"/>

        <item
            android:id="@+id/drawer_info"
            android:icon="@drawable/ic_info"
            android:title="@string/native_app_info"/>

        <item
            android:id="@+id/drawer_integration"
            android:icon="@drawable/ic_integration"
            android:title="@string/cloud_integration"/>

        <item
            android:id="@+id/drawer_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics"/>

    </group>

</menu>