<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <TextView
        style="@style/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cloud_integrations"/>

    <TextView
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloud_action_text"/>

    <Button
        android:id="@+id/call_cloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_cloud"/>

    <LinearLayout
        android:id="@+id/cloud_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/cloud_success_bg"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textColor="@color/gray"
            android:textSize="14sp"
            tools:text="Respone: Hello from FeedHenry"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cloud_response_text"/>

    </LinearLayout>

</LinearLayout>
